exec/secret&ingress/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: grafana
   namespace: monitoring
   annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
      cert-manager.io/cluster-issuer: letsencrypt
spec:
   tls:
   - hosts:
     - grafana.gaenari.kr
     secretName: grafana-ingress-tls
   rules:
   - host: grafana.gaenari.kr
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
            service:
               name: grafana
               port:
                  number: 80
